# aerosoltools

./: .buildinfo  .readthedocs.yml  README.md  examples.html  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  examples.doctree  index.doctree
.doctrees/api/: aerosol1d.doctree  aerosol2d.doctree  aerosolalt.doctree  loaders.doctree
.doctrees/examples/: Defining time segments, getting statistics, and plotting PSD.doctree  Load multiple files and time adjustments.doctree  Quick load and plot data.doctree
.github/workflows/: code_quality.yml  deploy-docs.yml  publish-to-pypi.yml
_sources/examples/: Load multiple files and time adjustments.ipynb.txt
api/: aerosol1d.html  aerosol2d.html  aerosolalt.html  loaders.html
api/_autosummary/: aerosoltools.aerosol1d.Aerosol1D.activities.html  aerosoltools.aerosol1d.Aerosol1D.activity_periods.html  aerosoltools.aerosol1d.Aerosol1D.copy_self.html  aerosoltools.aerosol1d.Aerosol1D.data.html  aerosoltools.aerosol1d.Aerosol1D.dtype.html  aerosoltools.aerosol1d.Aerosol1D.extra_data.html  aerosoltools.aerosol1d.Aerosol1D.get_activity_data.html  aerosoltools.aerosol1d.Aerosol1D.instrument.html  aerosoltools.aerosol1d.Aerosol1D.mark_activities.html  aerosoltools.aerosol1d.Aerosol1D.metadata.html  (+59 more)
examples/: Defining time segments, getting statistics, and plotting PSD.html  Load multiple files and time adjustments.html  Quick load and plot data.html
tests/: test_all_loaders.py  test_analysis_flow.py  test_load_elpi.py
(+97 files in other folders)
