[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aerosoltools"
version = "0.1.0"
description = "Tools for loading and analyzing aerosol instrument data"
authors = [{ name = "NRCWE community" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.0",
    "numpy>=1.20",
    "matplotlib>=3.1.0",
    "tabulate>=0.8.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
